	  -f[no-]system-name, -f[no-]register
	* parser.y: don't stop parsing on wrong entries in REPOSITORY

2017-07-10  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c: FR #206 added -O3 option

2017-07-09  Edward Hart <edward.dan.hart@gmail.com>

	* reserved.c: output a reserved word's aliases during --list-reserved
	  (feature request #214).

2017-07-07  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.c: RECORD KEY in SELECT does not support FD in name bug #331
	* tree.h: added cb_feature_mode for compiler features we can have
	  activated, disabled (by compiler configuration), or not implemented;
	  (cb_intrinsic_table): replaced "const int implemented" by
	  "enum cb_feature_mode active"
	* reserved.c, tree.c: adjusted cb_intrinsic_table to use cb_feature_mode

2017-07-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y, reserved.c, typeck.c, tree.h: added parsing for ACU
	  extensions DISPLAY WINDOW, CLOSE WINDOW and DESTROY statements

2017-07-05  Ron Norman <rjn@inglenet.com>

	* codegen.c, typeck.c, error.c, parser.y, tree.c, tree.h:
	  Updates to skip emiting code for IF, WHEN in cases where
	  the condition is resolved down to TRUE or FALSE at compile time
	  cb_error reports as 'Error (ignored)' when code is not being emitted

2017-07-04  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* error.c: don't output "[re]defined here" messages when there
	  is no actual location to reference
	* parser.y, reserved.c: added ACU extension USAGE HANDLE (both generic
	  and typed variants), added parser part for ACU THREADs (started via
	  CALL/PERFORM) and THREAD statements (SET THREAD PRIORITY and STOP THREAD)
	  [nothing done in libcob yet]
	* codegen.c, field.c: changes for USAGE HANDLE

2017-07-03  Ron Norman <rjn@inglenet.com>

	* typeck.c: Move check for cb_warn_parentheses to cb_build_expr routine
	  so that the check is done before constant expressions get folded
